deployment/kube/microservices/auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: default
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "user:8001"
    spec:
      serviceAccountName: auth
      containers:
        - name: auth
          image: socigy-auth-microservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
