deployment/kube/microservices/content.yml
apiVersion: v1
kind: Service
metadata:
  name: content
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: content
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content
  namespace: default
  labels:
    app: content
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "auth:8000,user:8001"
    spec:
      serviceAccountName: content
      containers:
        - name: content
          image: socigy-content-microservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
