deployment/kube/microservices/plugins.yml
apiVersion: v1
kind: Service
metadata:
  name: plugins
  namespace: default
spec:
  selector:
    app: plugins
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugins
  namespace: default
  labels:
    app: plugins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plugins
  template:
    metadata:
      labels:
        app: plugins
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "auth:8000,user:8001"
    spec:
      serviceAccountName: plugins
      containers:
        - name: plugins
          image: socigy-plugins-microservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
