deployment/kube/microservices/user.yml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: default
spec:
  selector:
    app: user
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: default
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "auth:8000"
    spec:
      serviceAccountName: user
      containers:
        - name: user
          image: socigy-user-microservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
